Don spec for AuthApiController@register in case validation
